# ai-solution-architecture-multi-agent

./: README.md  pyproject.toml  report.md  requirements.txt
db/: chroma.sqlite3
src/ai_solution_architecture_multi_agent/: crew.py  main.py
src/ai_solution_architecture_multi_agent/config/: agents.yaml  tasks.yaml
